# fast_simulator2

./: CMakeLists.txt  package.xml
include/fast_simulator2/: id_map.h  object.h  plugin.h  simulator.h  types.h  update_request.h  world.h
include/tue/simulator/: id_map.h  object.h  plugin.h  types.h  update_request.h  world.h
models/: amigo.yaml  kinect.yaml  laser_range_finder.yaml
plugins/: base_controller.cpp  base_controller.h  depth_sensor_plugin.cpp  depth_sensor_plugin.h  laser_range_finder_plugin.cpp  laser_range_finder_plugin.h  ros_robot_plugin.cpp  ros_robot_plugin.h
src/: depth_sensor.cpp  depth_sensor.h  laser_range_finder.cpp  laser_range_finder.h  main.cpp  object.cpp  object.h  plugin_container.cpp  plugin_container.h  robot.cpp  robot.h  simulator.cpp  simulator.h  simulator_plugin.cpp  simulator_plugin.h  types.h  update_request.cpp  world.cpp  world.h
test/configs/: ed_config1.yaml  test1.yaml
