<?xml version="1.0"?>
<package>
  <name>ed_simulator</name>
  <version>0.0.0</version>
  <description>No description available</description>

  <maintainer email="s.v.d.dries@tue.nl">Sjoerd van den Dries</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>ed</build_depend>
  <run_depend>ed</run_depend>

  <build_depend>ed_object_models</build_depend>
  <run_depend>ed_object_models</run_depend>

  <build_depend>urdf</build_depend>
  <run_depend>urdf</run_depend>

  <build_depend>kdl_parser</build_depend>
  <run_depend>kdl_parser</run_depend>

  <build_depend>rgbd</build_depend>
  <run_depend>rgbd</run_depend>

  <build_depend>class_loader</build_depend>
  <run_depend>class_loader</run_depend>

</package>
